fix title font-size to not wrap in mobile

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ nav > .link:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: clamp(3rem, 6vw, 7rem);
+    font-size: clamp(2rem, 6vw, 7rem);
     filter: blur(3px);
     color: rgb(165, 28, 13);
     z-index: 1;
